--- a/meta/main.yml
+++ b/meta/main.yml
@@ -23,9 +23,8 @@ galaxy_info:
         - all
     - name: Ubuntu
       versions:
-        - trusty
-        - xenial
         - artful
+        - bionic
 
   galaxy_tags:
     - digitalocean
