Moving to latest/edge/stable/etc.

--- a/molecule/debian-latest/molecule.yml
+++ b/molecule/debian-latest/molecule.yml
@@ -8,14 +8,14 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: roundcubemail-debian-buster
-    image: debian:buster
+  - name: roundcubemail-debian-latest
+    image: debian:latest
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
 scenario:
-  name: debian-buster
+  name: debian-latest
 verifier:
   name: goss
   lint:
