--- a/molecule/alpine-edge/molecule.yml
+++ b/molecule/alpine-edge/molecule.yml
@@ -8,14 +8,14 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: roundcubemail-ubuntu-bionic
-    image: ubuntu:bionic
+  - name: roundcubemail-alpine-edge
+    image: alpine:edge
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
 scenario:
-  name: ubuntu-bionic
+  name: alpine-edge
 verifier:
   name: goss
   lint:
