--- a/molecule/opensuse-leap/molecule.yml
+++ b/molecule/opensuse-leap/molecule.yml
@@ -8,14 +8,14 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: roundcubemail-opensuse-42.3
-    image: opensuse:42.3
+  - name: roundcubemail-opensuse-leap
+    image: opensuse:leap
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
 scenario:
-  name: opensuse-42.3
+  name: opensuse-leap
 verifier:
   name: goss
   lint:
