--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,10 @@
 ---
 galaxy_info:
   author: Robert de Bock
-  role_name: digitalocean-agent
+  role_name: digitalocean_agent
   description: Installs the digitalocean agent for your system.
   license: Apache License, Version 2.0
-  min_ansible_version: 2.3
+  min_ansible_version: 2.4
   min_ansible_container_version: 0.2.0
 
   platforms:
