--- a/molecule/archlinux/molecule.yml
+++ b/molecule/archlinux/molecule.yml
@@ -8,7 +8,7 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: roundcubemail-archlinux
+  - name: digitalocean-archlinux
     image: base/archlinux
 provisioner:
   name: ansible
