--- a/molecule/centos-6/molecule.yml
+++ b/molecule/centos-6/molecule.yml
@@ -8,7 +8,7 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: roundcubemail-centos-6
+  - name: digitalocean-centos-6
     image: centos:6
 provisioner:
   name: ansible
