--- a/.travis.yml
+++ b/.travis.yml
@@ -4,51 +4,52 @@ language: python
 services: docker
 
 env:
-  - version=">=2.4,<2.5" distro="alpine-latest"
-  - version=">=2.5,<2.6" distro="alpine-latest"
-  - version=">=2.6,<2.7" distro="alpine-latest"
-  - version=">=2.4,<2.5" distro="alpine-edge"
-  - version=">=2.5,<2.6" distro="alpine-edge"
-  - version=">=2.6,<2.7" distro="alpine-edge"
-  - version=">=2.4,<2.5" distro="archlinux"
-  - version=">=2.5,<2.6" distro="archlinux"
-  - version=">=2.6,<2.7" distro="archlinux"
+  - version=">=2.4,<2.5" distro="alpine-latest" expecation="fail"
+  - version=">=2.5,<2.6" distro="alpine-latest" expecation="fail"
+  - version=">=2.5,<2.6" distro="alpine-latest" expecation="fail"
+  - version=">=2.6,<2.7" distro="alpine-latest" expecation="fail"
+  - version=">=2.4,<2.5" distro="alpine-edge" expecation="fail"
+  - version=">=2.5,<2.6" distro="alpine-edge" expecation="fail"
+  - version=">=2.6,<2.7" distro="alpine-edge" expecation="fail"
+  - version=">=2.4,<2.5" distro="archlinux" expecation="fail"
+  - version=">=2.5,<2.6" distro="archlinux" expecation="fail"
+  - version=">=2.6,<2.7" distro="archlinux" expecation="fail"
   - version=">=2.4,<2.5" distro="centos-6"
   - version=">=2.5,<2.6" distro="centos-6"
   - version=">=2.6,<2.7" distro="centos-6"
-  - version=">=2.4,<2.5" distro="centos-latest"
-  - version=">=2.5,<2.6" distro="centos-latest"
-  - version=">=2.6,<2.7" distro="centos-latest"
-  - version=">=2.4,<2.5" distro="debian-latest"
-  - version=">=2.5,<2.6" distro="debian-latest"
-  - version=">=2.6,<2.7" distro="debian-latest"
-  - version=">=2.4,<2.5" distro="debian-stable"
-  - version=">=2.5,<2.6" distro="debian-stable"
-  - version=">=2.6,<2.7" distro="debian-stable"
-  - version=">=2.4,<2.5" distro="debian-unstable"
-  - version=">=2.5,<2.6" distro="debian-unstable"
-  - version=">=2.6,<2.7" distro="debian-unstable"
+  - version=">=2.4,<2.5" distro="centos-latest" expecation="fail"
+  - version=">=2.5,<2.6" distro="centos-latest" expecation="fail"
+  - version=">=2.6,<2.7" distro="centos-latest" expecation="fail"
+  - version=">=2.4,<2.5" distro="debian-latest" expecation="fail"
+  - version=">=2.5,<2.6" distro="debian-latest" expecation="fail"
+  - version=">=2.6,<2.7" distro="debian-latest" expecation="fail"
+  - version=">=2.4,<2.5" distro="debian-stable" expecation="fail"
+  - version=">=2.5,<2.6" distro="debian-stable" expecation="fail"
+  - version=">=2.6,<2.7" distro="debian-stable" expecation="fail"
+  - version=">=2.4,<2.5" distro="debian-unstable" expecation="fail"
+  - version=">=2.5,<2.6" distro="debian-unstable" expecation="fail"
+  - version=">=2.6,<2.7" distro="debian-unstable" expecation="fail"
   - version=">=2.4,<2.5" distro="fedora-latest"
   - version=">=2.5,<2.6" distro="fedora-latest"
   - version=">=2.6,<2.7" distro="fedora-latest"
   - version=">=2.4,<2.5" distro="fedora-rawhide"
   - version=">=2.5,<2.6" distro="fedora-rawhide"
   - version=">=2.6,<2.7" distro="fedora-rawhide"
-  - version=">=2.4,<2.5" distro="opensuse-leap"
-  - version=">=2.5,<2.6" distro="opensuse-leap"
-  - version=">=2.6,<2.7" distro="opensuse-leap"
-  - version=">=2.4,<2.5" distro="opensuse-tumbleweed"
-  - version=">=2.5,<2.6" distro="opensuse-tumbleweed"
-  - version=">=2.6,<2.7" distro="opensuse-tumbleweed"
-  - version=">=2.4,<2.5" distro="ubuntu-artful"
-  - version=">=2.5,<2.6" distro="ubuntu-artful"
-  - version=">=2.6,<2.7" distro="ubuntu-artful"
-  - version=">=2.4,<2.5" distro="ubuntu-latest"
-  - version=">=2.5,<2.6" distro="ubuntu-latest"
-  - version=">=2.6,<2.7" distro="ubuntu-latest"
-  - version=">=2.4,<2.5" distro="ubuntu-devel"
-  - version=">=2.5,<2.6" distro="ubuntu-devel"
-  - version=">=2.6,<2.7" distro="ubuntu-devel"
+  - version=">=2.4,<2.5" distro="opensuse-leap" expecation="fail"
+  - version=">=2.5,<2.6" distro="opensuse-leap" expecation="fail"
+  - version=">=2.6,<2.7" distro="opensuse-leap" expecation="fail"
+  - version=">=2.4,<2.5" distro="opensuse-tumbleweed" expecation="fail"
+  - version=">=2.5,<2.6" distro="opensuse-tumbleweed" expecation="fail"
+  - version=">=2.6,<2.7" distro="opensuse-tumbleweed" expecation="fail"
+  - version=">=2.4,<2.5" distro="ubuntu-artful" expecation="fail"
+  - version=">=2.5,<2.6" distro="ubuntu-artful" expecation="fail"
+  - version=">=2.6,<2.7" distro="ubuntu-artful" expecation="fail"
+  - version=">=2.4,<2.5" distro="ubuntu-latest" expecation="fail"
+  - version=">=2.5,<2.6" distro="ubuntu-latest" expecation="fail"
+  - version=">=2.6,<2.7" distro="ubuntu-latest" expecation="fail"
+  - version=">=2.4,<2.5" distro="ubuntu-devel" expecation="fail"
+  - version=">=2.5,<2.6" distro="ubuntu-devel" expecation="fail"
+  - version=">=2.6,<2.7" distro="ubuntu-devel" expecation="fail"
 
 matrix:
   allow_failures:
