--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ env:
   - version=">=2.4,<2.5" distro="centos-6"
   - version=">=2.5,<2.6" distro="centos-6"
   - version=">=2.6,<2.7" distro="centos-6"
-  - version=">=2.4,<2.5" distro="centos-latest" expectation="fail"
-  - version=">=2.5,<2.6" distro="centos-latest" expectation="fail"
-  - version=">=2.6,<2.7" distro="centos-latest" expectation="fail"
+  - version=">=2.4,<2.5" distro="centos-latest"
+  - version=">=2.5,<2.6" distro="centos-latest"
+  - version=">=2.6,<2.7" distro="centos-latest"
   - version=">=2.4,<2.5" distro="debian-latest" expectation="fail"
   - version=">=2.5,<2.6" distro="debian-latest" expectation="fail"
   - version=">=2.6,<2.7" distro="debian-latest" expectation="fail"
