--- a/.travis.yml
+++ b/.travis.yml
@@ -53,18 +53,18 @@ env:
 
 matrix:
   allow_failures:
-    - env: version=">=2.4,<2.5" distro="alpine-edge"
-    - env: version=">=2.5,<2.6" distro="alpine-edge"
-    - env: version=">=2.6,<2.7" distro="alpine-edge"
-    - env: version=">=2.4,<2.5" distro="debian-unstable"
-    - env: version=">=2.5,<2.6" distro="debian-unstable"
-    - env: version=">=2.6,<2.7" distro="debian-unstable"
+    - env: version=">=2.4,<2.5" distro="alpine-edge" expectation="fail"
+    - env: version=">=2.5,<2.6" distro="alpine-edge" expectation="fail"
+    - env: version=">=2.6,<2.7" distro="alpine-edge" expectation="fail"
+    - env: version=">=2.4,<2.5" distro="debian-unstable" expectation="fail"
+    - env: version=">=2.5,<2.6" distro="debian-unstable" expectation="fail"
+    - env: version=">=2.6,<2.7" distro="debian-unstable" expectation="fail"
     - env: version=">=2.4,<2.5" distro="fedora-rawhide"
     - env: version=">=2.5,<2.6" distro="fedora-rawhide"
     - env: version=">=2.6,<2.7" distro="fedora-rawhide"
-    - env: version=">=2.4,<2.5" distro="ubuntu-devel"
-    - env: version=">=2.5,<2.6" distro="ubuntu-devel"
-    - env: version=">=2.6,<2.7" distro="ubuntu-devel"
+    - env: version=">=2.4,<2.5" distro="ubuntu-devel" expectation="fail"
+    - env: version=">=2.5,<2.6" distro="ubuntu-devel" expectation="fail"
+    - env: version=">=2.6,<2.7" distro="ubuntu-devel" expectation="fail"
 
 cache:
   - pip
