https://docs.ansible.com/ansible/latest/user_guide/playbooks_best_practices.html#always-mention-the-state

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,6 +9,7 @@
 - name: import apt key
   apt_key:
     url: "{{ digitalocean_agent_gpgkey }}"
+    state: present
   when:
     - ansible_pkg_mgr == "apt"
 
@@ -34,3 +35,4 @@
 - name: install software
   package:
     name: do-agent
+    state: present
