Ansible Fest 2018 lessons learned.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -32,7 +32,7 @@
 - name: flush handlers
   meta: flush_handlers
 
-- name: install software
+- name: install do-agent
   package:
     name: do-agent
     state: present
