--- a/.travis.yml
+++ b/.travis.yml
@@ -6,72 +6,121 @@ services: docker
 env:
   - version=">=2.4,<2.5" distro="alpine-latest" expectation="fail"
   - version=">=2.5,<2.6" distro="alpine-latest" expectation="fail"
-  - version=">=2.5,<2.6" distro="alpine-latest" expectation="fail"
   - version=">=2.6,<2.7" distro="alpine-latest" expectation="fail"
+  - version=">=2.7,<2.8" distro="alpine-latest" expectation="fail"
+  - version="devel" distro="alpine-latest" expectation="fail"
   - version=">=2.4,<2.5" distro="alpine-edge" expectation="fail"
   - version=">=2.5,<2.6" distro="alpine-edge" expectation="fail"
   - version=">=2.6,<2.7" distro="alpine-edge" expectation="fail"
+  - version=">=2.7,<2.8" distro="alpine-edge" expectation="fail"
+  - version="devel" distro="alpine-edge" expectation="fail"
   - version=">=2.4,<2.5" distro="archlinux" expectation="fail"
   - version=">=2.5,<2.6" distro="archlinux" expectation="fail"
   - version=">=2.6,<2.7" distro="archlinux" expectation="fail"
+  - version=">=2.7,<2.8" distro="archlinux" expectation="fail"
+  - version="devel" distro="archlinux" expectation="fail"
   - version=">=2.4,<2.5" distro="centos-6"
   - version=">=2.5,<2.6" distro="centos-6"
   - version=">=2.6,<2.7" distro="centos-6"
+  - version=">=2.7,<2.8" distro="centos-6"
+  - version="devel" distro="centos-6"
   - version=">=2.4,<2.5" distro="centos-latest"
   - version=">=2.5,<2.6" distro="centos-latest"
   - version=">=2.6,<2.7" distro="centos-latest"
+  - version=">=2.7,<2.8" distro="centos-latest"
+  - version="devel" distro="centos-latest"
   - version=">=2.4,<2.5" distro="debian-latest" expectation="fail"
   - version=">=2.5,<2.6" distro="debian-latest" expectation="fail"
   - version=">=2.6,<2.7" distro="debian-latest" expectation="fail"
+  - version=">=2.7,<2.8" distro="debian-latest" expectation="fail"
+  - version="devel" distro="debian-latest" expectation="fail"
   - version=">=2.4,<2.5" distro="debian-stable" expectation="fail"
   - version=">=2.5,<2.6" distro="debian-stable" expectation="fail"
   - version=">=2.6,<2.7" distro="debian-stable" expectation="fail"
+  - version=">=2.7,<2.8" distro="debian-stable" expectation="fail"
+  - version="devel" distro="debian-stable" expectation="fail"
   - version=">=2.4,<2.5" distro="debian-unstable" expectation="fail"
   - version=">=2.5,<2.6" distro="debian-unstable" expectation="fail"
   - version=">=2.6,<2.7" distro="debian-unstable" expectation="fail"
+  - version=">=2.7,<2.8" distro="debian-unstable" expectation="fail"
+  - version="devel" distro="debian-unstable" expectation="fail"
   - version=">=2.4,<2.5" distro="fedora-latest"
   - version=">=2.5,<2.6" distro="fedora-latest"
   - version=">=2.6,<2.7" distro="fedora-latest"
+  - version=">=2.7,<2.8" distro="fedora-latest"
+  - version="devel" distro="fedora-latest"
   - version=">=2.4,<2.5" distro="fedora-rawhide"
   - version=">=2.5,<2.6" distro="fedora-rawhide"
   - version=">=2.6,<2.7" distro="fedora-rawhide"
+  - version=">=2.7,<2.8" distro="fedora-rawhide"
+  - version="devel" distro="fedora-rawhide"
   - version=">=2.4,<2.5" distro="opensuse-leap" expectation="fail"
   - version=">=2.5,<2.6" distro="opensuse-leap" expectation="fail"
   - version=">=2.6,<2.7" distro="opensuse-leap" expectation="fail"
+  - version=">=2.7,<2.8" distro="opensuse-leap" expectation="fail"
+  - version="devel" distro="opensuse-leap" expectation="fail"
   - version=">=2.4,<2.5" distro="opensuse-tumbleweed" expectation="fail"
   - version=">=2.5,<2.6" distro="opensuse-tumbleweed" expectation="fail"
   - version=">=2.6,<2.7" distro="opensuse-tumbleweed" expectation="fail"
+  - version=">=2.7,<2.8" distro="opensuse-tumbleweed" expectation="fail"
+  - version="devel" distro="opensuse-tumbleweed" expectation="fail"
   - version=">=2.4,<2.5" distro="ubuntu-artful" expectation="fail"
   - version=">=2.5,<2.6" distro="ubuntu-artful" expectation="fail"
   - version=">=2.6,<2.7" distro="ubuntu-artful" expectation="fail"
+  - version=">=2.7,<2.8" distro="ubuntu-artful" expectation="fail"
+  - version="devel" distro="ubuntu-artful" expectation="fail"
   - version=">=2.4,<2.5" distro="ubuntu-latest" expectation="fail"
   - version=">=2.5,<2.6" distro="ubuntu-latest" expectation="fail"
   - version=">=2.6,<2.7" distro="ubuntu-latest" expectation="fail"
+  - version=">=2.7,<2.8" distro="ubuntu-latest" expectation="fail"
+  - version="devel" distro="ubuntu-latest" expectation="fail"
   - version=">=2.4,<2.5" distro="ubuntu-devel" expectation="fail"
   - version=">=2.5,<2.6" distro="ubuntu-devel" expectation="fail"
   - version=">=2.6,<2.7" distro="ubuntu-devel" expectation="fail"
+  - version=">=2.7,<2.8" distro="ubuntu-devel" expectation="fail"
+  - version="devel" distro="ubuntu-devel" expectation="fail"
 
 matrix:
   allow_failures:
     - env: version=">=2.4,<2.5" distro="alpine-edge" expectation="fail"
     - env: version=">=2.5,<2.6" distro="alpine-edge" expectation="fail"
     - env: version=">=2.6,<2.7" distro="alpine-edge" expectation="fail"
+    - env: version=">=2.7,<2.8" distro="alpine-edge" expectation="fail"
+    - env: version="devel" distro="alpine-edge" expectation="fail"
+    - env: version="devel" distro="alpine-latest" expectation="fail"
+    - env: version="devel" distro="archlinux" expectation="fail"
+    - env: version="devel" distro="centos-6"
+    - env: version="devel" distro="centos-latest"
+    - env: version="devel" distro="debian-latest" expectation="fail"
+    - env: version="devel" distro="debian-stable" expectation="fail"
     - env: version=">=2.4,<2.5" distro="debian-unstable" expectation="fail"
     - env: version=">=2.5,<2.6" distro="debian-unstable" expectation="fail"
     - env: version=">=2.6,<2.7" distro="debian-unstable" expectation="fail"
+    - env: version=">=2.7,<2.8" distro="debian-unstable" expectation="fail"
+    - env: version="devel" distro="debian-unstable" expectation="fail"
+    - env: version="devel" distro="fedora-latest"
     - env: version=">=2.4,<2.5" distro="fedora-rawhide"
     - env: version=">=2.5,<2.6" distro="fedora-rawhide"
     - env: version=">=2.6,<2.7" distro="fedora-rawhide"
+    - env: version=">=2.7,<2.8" distro="fedora-rawhide"
+    - env: version="devel" distro="fedora-rawhide"
+    - env: version="devel" distro="opensuse-leap" expectation="fail"
+    - env: version="devel" distro="opensuse-tumbleweed" expectation="fail"
+    - env: version="devel" distro="ubuntu-artful" expectation="fail"
     - env: version=">=2.4,<2.5" distro="ubuntu-devel" expectation="fail"
     - env: version=">=2.5,<2.6" distro="ubuntu-devel" expectation="fail"
     - env: version=">=2.6,<2.7" distro="ubuntu-devel" expectation="fail"
+    - env: version=">=2.7,<2.8" distro="ubuntu-devel" expectation="fail"
+    - env: version="devel" distro="ubuntu-devel" expectation="fail"
+    - env: version="devel" distro="ubuntu-latest" expectation="fail"
 
 cache:
   - pip
 
 install:
   - pip install --upgrade pip
-  - pip install ansible"${version}"
+  - if [ "${version}" != "devel" ] ; then pip install ansible"${version}" ; fi
+  - if [ "${version}" = "devel" ] ; then pip install git+https://github.com/ansible/ansible.git@devel ; fi
   - pip install molecule
   - pip install docker
 
