--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -38,6 +38,8 @@ platforms:
     image: ubuntu:artful
   - name: digitalocean-agent-ubuntu-devel
     image: ubuntu:devel
+  - name: digitalocean-agent-ubuntu-latest
+    image: ubuntu:latest
 provisioner:
   name: ansible
   lint:
