Simpler and works on Debian.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,15 @@ env:
   - version=">=2.6,<2.7" distro="centos-latest"
   - version="" distro="centos-latest"
   - version="devel" distro="centos-latest"
-  - version=">=2.6,<2.7" distro="debian-latest" expectation="fail"
-  - version="" distro="debian-latest" expectation="fail"
-  - version="devel" distro="debian-latest" expectation="fail"
-  - version=">=2.6,<2.7" distro="debian-stable" expectation="fail"
-  - version="" distro="debian-stable" expectation="fail"
-  - version="devel" distro="debian-stable" expectation="fail"
-  - version=">=2.6,<2.7" distro="debian-unstable" expectation="fail"
-  - version="" distro="debian-unstable" expectation="fail"
-  - version="devel" distro="debian-unstable" expectation="fail"
+  - version=">=2.6,<2.7" distro="debian-latest"
+  - version="" distro="debian-latest"
+  - version="devel" distro="debian-latest"
+  - version=">=2.6,<2.7" distro="debian-stable"
+  - version="" distro="debian-stable"
+  - version="devel" distro="debian-stable"
+  - version=">=2.6,<2.7" distro="debian-unstable"
+  - version="" distro="debian-unstable"
+  - version="devel" distro="debian-unstable"
   - version=">=2.6,<2.7" distro="fedora-latest"
   - version="" distro="fedora-latest"
   - version="devel" distro="fedora-latest"
@@ -40,15 +40,15 @@ env:
   - version=">=2.6,<2.7" distro="opensuse-tumbleweed" expectation="fail"
   - version="" distro="opensuse-tumbleweed" expectation="fail"
   - version="devel" distro="opensuse-tumbleweed" expectation="fail"
-  - version=">=2.6,<2.7" distro="ubuntu-artful" expectation="fail"
-  - version="" distro="ubuntu-artful" expectation="fail"
-  - version="devel" distro="ubuntu-artful" expectation="fail"
-  - version=">=2.6,<2.7" distro="ubuntu-latest" expectation="fail"
-  - version="" distro="ubuntu-latest" expectation="fail"
-  - version="devel" distro="ubuntu-latest" expectation="fail"
-  - version=">=2.6,<2.7" distro="ubuntu-devel" expectation="fail"
-  - version="" distro="ubuntu-devel" expectation="fail"
-  - version="devel" distro="ubuntu-devel" expectation="fail"
+  - version=">=2.6,<2.7" distro="ubuntu-artful"
+  - version="" distro="ubuntu-artful"
+  - version="devel" distro="ubuntu-artful"
+  - version=">=2.6,<2.7" distro="ubuntu-latest"
+  - version="" distro="ubuntu-latest"
+  - version="devel" distro="ubuntu-latest"
+  - version=">=2.6,<2.7" distro="ubuntu-devel"
+  - version="" distro="ubuntu-devel"
+  - version="devel" distro="ubuntu-devel"
 
 matrix:
   allow_failures:
@@ -59,22 +59,22 @@ matrix:
     - env: version="devel" distro="archlinux" expectation="fail"
     - env: version="devel" distro="centos-6"
     - env: version="devel" distro="centos-latest"
-    - env: version="devel" distro="debian-latest" expectation="fail"
-    - env: version="devel" distro="debian-stable" expectation="fail"
-    - env: version=">=2.6,<2.7" distro="debian-unstable" expectation="fail"
-    - env: version="" distro="debian-unstable" expectation="fail"
-    - env: version="devel" distro="debian-unstable" expectation="fail"
+    - env: version="devel" distro="debian-latest"
+    - env: version="devel" distro="debian-stable"
+    - env: version=">=2.6,<2.7" distro="debian-unstable"
+    - env: version="" distro="debian-unstable"
+    - env: version="devel" distro="debian-unstable"
     - env: version="devel" distro="fedora-latest"
     - env: version=">=2.6,<2.7" distro="fedora-rawhide"
     - env: version="" distro="fedora-rawhide"
     - env: version="devel" distro="fedora-rawhide"
     - env: version="devel" distro="opensuse-leap" expectation="fail"
     - env: version="devel" distro="opensuse-tumbleweed" expectation="fail"
-    - env: version="devel" distro="ubuntu-artful" expectation="fail"
-    - env: version=">=2.6,<2.7" distro="ubuntu-devel" expectation="fail"
-    - env: version="" distro="ubuntu-devel" expectation="fail"
-    - env: version="devel" distro="ubuntu-devel" expectation="fail"
-    - env: version="devel" distro="ubuntu-latest" expectation="fail"
+    - env: version="devel" distro="ubuntu-artful"
+    - env: version=">=2.6,<2.7" distro="ubuntu-devel"
+    - env: version="" distro="ubuntu-devel"
+    - env: version="devel" distro="ubuntu-devel"
+    - env: version="devel" distro="ubuntu-latest"
 
 cache:
   - pip
