--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,6 +5,9 @@
     key: "{{ digitalocean_agent_gpgkey }}"
   when:
     - ansible_pkg_mgr == "yum" or ansible_pkg_mgr == "dnf"
+  register: digitalocean_agent_import_rpm_key
+  until: digitalocean_agent_import_rpm_key is succeeded
+  retries: 3
 
 - name: import apt key
   apt_key:
@@ -12,6 +15,9 @@
     state: present
   when:
     - ansible_pkg_mgr == "apt"
+  register: digitalocean_agent_import_apt_key
+  until: digitalocean_agent_import_apt_key is succeeded
+  retries: 3
 
 - name: install repository
   copy:
