--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: Robert de Bock
   role_name: digitalocean_agent
-  description: The purpose of this role is to install digitalocean agent on your system.
+  description: Install digitalocean agent on your system.
   license: Apache-2.0
   company: none
   min_ansible_version: 2.6
