--- a/molecule/ubuntu-rolling/molecule.yml
+++ b/molecule/ubuntu-rolling/molecule.yml
@@ -8,14 +8,14 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: digitalocean-ubuntu-artful
-    image: ubuntu:artful
+  - name: digitalocean-ubuntu-rolling
+    image: ubuntu:rolling
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
 scenario:
-  name: ubuntu-artful
+  name: ubuntu-rolling
 verifier:
   name: goss
   lint:
