--- a/molecule/centos-6/molecule.yml
+++ b/molecule/centos-6/molecule.yml
@@ -3,12 +3,12 @@ dependency:
   name: galaxy
   options:
     role-file: requirements.yml
-driver:
-  name: docker
 lint:
   name: yamllint
+driver:
+  name: docker
 platforms:
-  - name: digitalocean-centos-6
+  - name: digitalocean-agent-centos-6
     image: centos:6
 provisioner:
   name: ansible
