--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -10,38 +10,56 @@ driver:
 platforms:
   - name: digitalocean-agent-alpine-edge
     image: alpine:edge
+    pre_build_image: yes
     command: sh -c "while true ; do sleep 1 ; done"
   - name: digitalocean-agent-alpine-latest
     image: alpine:latest
+    pre_build_image: yes
     command: sh -c "while true ; do sleep 1 ; done"
   - name: digitalocean-agent-archlinux
     image: archlinux/base
+    pre_build_image: yes
   - name: digitalocean-agent-centos-6
     image: centos:6
+    pre_build_image: yes
   - name: digitalocean-agent-centos-latest
     image: centos:latest
+    pre_build_image: yes
   - name: digitalocean-agent-debian-latest
     image: debian:latest
+    pre_build_image: yes
   - name: digitalocean-agent-debian-stable
     image: debian:stable
+    pre_build_image: yes
   - name: digitalocean-agent-debian-unstable
     image: debian:unstable
+    pre_build_image: yes
   - name: digitalocean-agent-fedora-latest
     image: fedora:latest
+    pre_build_image: yes
   - name: digitalocean-agent-fedora-rawhide
     image: fedora:rawhide
+    pre_build_image: yes
   - name: digitalocean-agent-opensuse-leap
     image: opensuse:leap
+    pre_build_image: yes
   - name: digitalocean-agent-ubuntu-latest
     image: ubuntu:latest
+    pre_build_image: yes
   - name: digitalocean-agent-ubuntu-rolling
     image: ubuntu:rolling
+    pre_build_image: yes
   - name: digitalocean-agent-ubuntu-devel
     image: ubuntu:devel
+    pre_build_image: yes
   - name: digitalocean-agent-ubuntu-latest
     image: ubuntu:latest
+    pre_build_image: yes
 provisioner:
   name: ansible
+  playbooks:
+    prepare: ../resources/prepare.yml
+    converge: ../resources/playbook.yml
   lint:
     name: ansible-lint
 scenario:
