--- a/molecule/resources/prepare.yml
+++ b/molecule/resources/prepare.yml
@@ -1,10 +1,9 @@
 ---
-- name: Converge
+- name: Prepare
   hosts: all
-  gather_facts: no
   become: yes
+  gather_facts: no
 
   roles:
     - robertdebock.bootstrap
     - robertdebock.apt_autostart
-    - ansible-role-digitalocean-agent
