Verify by Ansible and dont specify default playbook/prepare.yml.

--- a/meta/exception.yml
+++ b/meta/exception.yml
@@ -6,5 +6,7 @@ exceptions:
     reason: "target not found: do-agent"
   - variation: Debian
     reason: "ln: failed to create symbolic link '/etc/systemd/system/multi-user.target.wants/do-agent.service': No such file or directory"
+  - variation: Suse
+    reaso: "No provider of '+do-agent"
   - variation: Ubuntu
     reason: "ln: failed to create symbolic link '/etc/systemd/system/multi-user.target.wants/do-agent.service': No such file or directory"
