--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,7 +8,7 @@ lint:
 driver:
   name: docker
 platforms:
-  - name: "digitalocean-agent-${image:-fedora}${TOX_ENVNAME}"
+  - name: "digitalocean-agent-${image:-fedora}-${tag:-latest}${TOX_ENVNAME}"
     image: "${namespace:-robertdebock}/${image:-fedora}:${tag:-latest}"
     command: /sbin/init
     tmpfs:
