--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ env:
     namespace="robertdebock"
   matrix:
     - image="centos" tag="7"
+    - image="redhat" tag="7"
     - image="centos"
+    - image="redhat"
     - image="fedora"
     - image="fedora" tag="rawhide"
 
