Don't fail basically.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -52,6 +52,7 @@
   register: systemctl
   tags:
     - skip_ansible_lint
+  failed_when: no
 
 - name: show systemctl
   debug:
@@ -61,6 +62,7 @@
   command: journalctl
   changed_when: no
   register: journalctl
+  failed_when: no
 
 - name: show journalctl
   debug:
