--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -5,6 +5,6 @@
   gather_facts: no
 
   roles:
-    - robertdebock.bootstrap
-    - robertdebock.ca_certificates
-    - robertdebock.apt_autostart
+    - role: robertdebock.bootstrap
+    - role: robertdebock.ca_certificates
+    - role: robertdebock.apt_autostart
