--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -49,10 +49,14 @@
 - name: check systemctl
   command: systemctl status do-agent
   register: systemctl
+  changed_when: no
+  faileD_when: no
 
 - name: check journalctl
   command: journalctl -xe
   register: journalctl
+  changed_when: no
+  faileD_when: no
 
 - name: show stuff
   debug:
