--- a/meta/exception.yml
+++ b/meta/exception.yml
@@ -1,12 +1,8 @@
 ---
 exceptions:
-  - variation: Alpine
+  - variation: alpine
     reason: "do-agent (missing)"
-  - variation: Archlinux
-    reason: "target not found: do-agent"
-  - variation: Debian
-    reason: "ln: failed to create symbolic link '/etc/systemd/system/multi-user.target.wants/do-agent.service': No such file or directory"
-  - variation: Suse
+  - variation: suse
     reason: "No provider of '+do-agent"
-  - variation: Ubuntu
-    reason: "ln: failed to create symbolic link '/etc/systemd/system/multi-user.target.wants/do-agent.service': No such file or directory"
+  - variation: "centos:latest"
+    reason: "rpm_key is not idempotent..."
