Probed, more distribution version.

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -37,6 +37,8 @@ jobs:
             tag: "1"
           - image: "centos"
             tag: "7"
+          - image: "centos"
+            tag: "latest"
           - image: "debian"
             tag: "latest"
           - image: "debian"
