Ansible lint 4.3.0 fix: [208] File permissions not mentioned

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,6 +18,7 @@
   copy:
     src: "{{ digitalocean_agent_repository_src }}"
     dest: "{{ digitalocean_agent_repository_dest }}"
+    mode: "0640"
   when:
     - ansible_pkg_mgr in ["yum", "dnf", "apt"]
   notify:
