--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,3 +5,4 @@
 repository:
   description: Install digitalocean agent on your system.
   homepage: https://robertdebock.nl/
+  topics: digitalocean, digitaloceanagent, doagent, ansible, molecule, tox, playbook, hacktoberfest
