--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,7 +2,7 @@
 # handlers file for digitalocean-agent
 
 - name: update apt cache
-  apt:
+  ansible.builtin.apt:
     update_cache: yes
   when:
     - ansible_pkg_mgr == "apt"
