ansible-lint: All names should start with an uppercase letter.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 # tasks file for digitalocean-agent
 
-- name: import rpm key
+- name: Import rpm key
   ansible.builtin.rpm_key:
     key: "{{ digitalocean_agent_gpgkey }}"
   when:
     - ansible_pkg_mgr in [ "dnf", "yum" ]
 
-- name: import apt key
+- name: Import apt key
   ansible.builtin.apt_key:
     url: "{{ digitalocean_agent_gpgkey }}"
     validate_certs: "{{ digitalocean_agent_validate_certs }}"
@@ -15,7 +15,7 @@
   when:
     - ansible_pkg_mgr == "apt"
 
-- name: install repository
+- name: Install repository
   ansible.builtin.copy:
     src: "{{ digitalocean_agent_repository_src }}"
     dest: "{{ digitalocean_agent_repository_dest }}"
@@ -23,17 +23,17 @@
   when:
     - ansible_pkg_mgr in [ "yum", "dnf", "apt" ]
   notify:
-    - update apt cache
+    - Update apt cache
 
-- name: flush handlers
+- name: Flush handlers
   ansible.builtin.meta: flush_handlers
 
-- name: install do-agent
+- name: Install do-agent
   ansible.builtin.package:
     name: do-agent
     state: present
 
-- name: start do-agent
+- name: Start do-agent
   ansible.builtin.service:
     name: do-agent
     state: started
