Cleanup code, use cased names.

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -5,7 +5,7 @@
   gather_facts: no
 
   tasks:
-    - name: check /opt/digitalocean/bin/do-agent
+    - name: Check /opt/digitalocean/bin/do-agent
       ansible.builtin.stat:
         path: /opt/digitalocean/bin/do-agent
       register: check_do_agent
