Change yes/no to true/false, adhere to yamlspec 1.2.2

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,6 +3,6 @@
 
 - name: Update apt cache
   ansible.builtin.apt:
-    update_cache: yes
+    update_cache: true
   when:
     - ansible_pkg_mgr == "apt"
