--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -1,8 +1,8 @@
 ---
 - name: Verify
   hosts: all
-  become: no
-  gather_facts: no
+  become: false
+  gather_facts: false
 
   tasks:
     - name: Check /opt/digitalocean/bin/do-agent
