--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,7 +19,7 @@
   ansible.builtin.copy:
     src: "{{ digitalocean_agent_repository_src }}"
     dest: "{{ digitalocean_agent_repository_dest }}"
-    force: no
+    force: false
     mode: "0640"
   when:
     - ansible_pkg_mgr in [ "yum", "dnf", "apt" ]
@@ -38,4 +38,4 @@
   ansible.builtin.service:
     name: do-agent
     state: started
-    enabled: yes
+    enabled: true
